# gfx_project

./: .gitignore  Makefile  README.md
app/: CMakeLists.txt
app/forms/: GuiBaseComponents.fbp  MainFrame.cpp  MainFrame.h  mainWindow.fbp
app/include/: CompareController.h  DiffCalculator.h  DiffFrame.h  DiffFrameBase.h  GuiBaseComponents.h  Helpers.h  ImageComparePanel.h  ImageComparerFrame.h  ImageInfoPanel.h  ImageInfoPanelBase.h  ImageService.h  SharedData.h  WindowPatch.h
app/source/: CMakeLists.txt  CompareController.cpp  DiffCalculator.cpp  DiffFrame.cpp  DiffFrameBase.cpp  GuiBaseComponents.cpp  ImageComparePanel.cpp  ImageComparerFrame.cpp  ImageInfoPanel.cpp  ImageService.cpp  SharedData.cpp  main.cpp
design/: class_diagram.dia
doxy_docs/html/: _compare_controller_8cpp.html  _compare_controller_8cpp_source.html  _compare_controller_8h.html  _diff_calculator_8cpp_source.html  _diff_frame_8cpp.html  _diff_frame_8cpp_source.html  _diff_frame_base_8cpp.html  _diff_frame_base_8cpp_source.html  _diff_frame_base_8h.html  _gui_base_components_8h.html  _gui_base_components_8h_source.html  _image_compare_panel_8h.html  _image_compare_panel_8h_source.html  _image_comparer_frame_8cpp.html  _image_comparer_frame_8h.html  _image_info_panel_8cpp.html  _image_info_panel_8cpp_source.html  _image_info_panel_8h.html  _image_info_panel_8h_source.html  _image_service_8h.html  _image_service_8h_source.html  _shared_data_8cpp.html  _shared_data_8cpp_source.html  _shared_data_8h_source.html  _window_patch_8h_source.html  annotated.html  class_app-members.html  class_app.html  class_diff_frame_base.html  classdiff_1_1_diff_frame-members.html  classdiff_1_1_diff_frame.html  classes.html  classgui_1_1_image_compare_panel.html  classgui_1_1_image_comparer_frame-members.html  classgui_1_1_image_comparer_frame.html  classgui_1_1_image_info_panel-members.html  classgui_1_1_image_info_panel_base.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  functions.html  functions_func.html  (+7 more)
doxy_docs/html/search/: all_2.js  all_3.js  all_5.js  all_b.js  all_d.js  all_f.js  classes_1.js  classes_2.js  classes_4.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_5.js  files_0.js  files_2.js  files_4.js  files_6.js  functions_0.js  functions_10.js  functions_6.js  functions_7.js  functions_8.js  functions_b.js  functions_c.js  functions_e.js  functions_f.js  searchdata.js  variables_11.js  variables_3.js  variables_5.js  variables_6.js  variables_a.js  variables_e.js
package/DOC/doxy_docs/html/: _compare_controller_8h_source.html  _diff_calculator_8cpp.html  _diff_calculator_8h.html  _diff_calculator_8h_source.html  _diff_frame_8h.html  _diff_frame_8h_source.html  _diff_frame_base_8h_source.html  _gui_base_components_8cpp.html  _gui_base_components_8cpp_source.html  _helpers_8cpp.html  _helpers_8cpp_source.html  _helpers_8h.html  _helpers_8h_source.html  _image_compare_panel_8cpp.html  _image_compare_panel_8cpp_source.html  _image_comparer_frame_8cpp_source.html  _image_comparer_frame_8h_source.html  _image_info_panel_base_8h.html  _image_info_panel_base_8h_source.html  _image_service_8cpp.html  _image_service_8cpp_source.html  _shared_data_8h.html  _window_patch_8h.html  class_diff_frame_base-members.html  classcore_1_1_compare_controller-members.html  classcore_1_1_compare_controller.html  classcore_1_1_image_service.html  (+21 more)
package/SRC/: .gitignore  Doxyfile  README.md
package/SRC/app/: CMakeLists.txt
package/SRC/app/source/: CMakeLists.txt  DiffCalculator.cpp  GuiBaseComponents.cpp  Helpers.cpp  ImageComparerFrame.cpp  ImageInfoPanel.cpp  ImageService.cpp  main.cpp
package/SRC/design/: class_diagram.dia
package/SRC/scripts/: install_wx.sh
scripts/: install_all.sh  install_boost.sh  install_wx.sh  install_wxformbuilder.sh
(+46 files in other folders)
